<resources>
    <string name="app_name">Diplom</string>
    <string name="google_play_unavailable" translatable="false">Google Api Unavailable</string>
    <string name="welcome_text">Welcome!</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="authorisation_introduction">Enter your login and password:</string>
    <string name="pass">Пароль</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_yet_text">Not registered yet?</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="confirm_pass">Confirm pass</string>
    <string name="pass_different">Passwords are different</string>
    <string name="empty_posts">There are no posts...</string>
    <string name="menu_edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="ok" translatable="false">OK</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="menu_remove">Remove</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="event">Event</string>
    <string name="author">Author</string>
    <string name="time">Time</string>
    <string name="format">Format</string>
    <string name="speaker">Speaker</string>
    <string name="speakers">Speakers</string>
    <string name="participants">Participants</string>
    <string name="link">Link</string>
    <string name="no_events">There are no events...</string>
    <string name="posts_item_name">Posts</string>
    <string name="events_item_name">Events</string>
    <string name="join">Join</string>
    <string name="reject">Reject</string>
    <string name="title">Title</string>
    <string name="them">Them</string>
    <string name="date">Date</string>
    <string name="date_time">Date/Time</string>
    <string name="add">Add</string>
    <string name="user_already_registered">User already registered</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="feedFragment">Posts</string>
    <string name="eventsListFragment">Events</string>
    <string name="fragment_edit_post">Edit Post</string>
    <string name="editEventFragment">Edit Event</string>

    <string-array name="event_format">
        <item>ONLINE</item>
        <item>OFFLINE</item>
    </string-array>
</resources>