<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_home"
    app:startDestination="@id/feedFragment">

    <fragment
        android:id="@+id/feedFragment"
        android:name="ru.netology.nmedia.ui.FeedFragment"
        android:label="@string/feedFragment"
        tools:layout="@layout/fragment_feed" >
        <action
            android:id="@+id/action_feedFragment_to_editPostFragment"
            app:destination="@id/editPostFragment" />
        <action
            android:id="@+id/action_feedFragment_to_eventsListFragment"
            app:destination="@id/eventsListFragment" />
    </fragment>
    <fragment
        android:id="@+id/eventsListFragment"
        android:name="ru.netology.nmedia.ui.EventsListFragment"
        android:label="@string/eventsListFragment"
        tools:layout="@layout/fragment_events_list" >
        <action
            android:id="@+id/action_eventsListFragment_to_editEventFragment"
            app:destination="@id/editEventFragment" />
    </fragment>
    <fragment
        android:id="@+id/editPostFragment"
        android:name="ru.netology.nmedia.ui.EditPostFragment"
        android:label="@string/fragment_edit_post"
        tools:layout="@layout/fragment_edit_post" />
    <fragment
        android:id="@+id/editEventFragment"
        android:name="ru.netology.nmedia.ui.EditEventFragment"
        android:label="@string/editEventFragment"
        tools:layout="@layout/fragment_edit_event" />
</navigation>