<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.RegistrationFragment">

    <TextView
        android:id="@+id/dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/registration" />

    <FrameLayout
        android:id="@+id/avatar_container"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/space32x">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/space16x"
            android:layout_height="@dimen/space16x"
            android:layout_margin="@dimen/space6x"
            android:src="@drawable/ic_empty_avatar" />

        <ImageView
            android:id="@+id/pick_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_margin="@dimen/space3x"
            android:src="@drawable/ic_baseline_add_photo_alternate_24" />

        <ImageView
            android:id="@+id/take_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_margin="@dimen/space3x"
            android:src="@drawable/ic_baseline_add_a_photo_24" />

        <ImageView
            android:id="@+id/remove_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/space3x"
            android:src="@drawable/ic_baseline_delete_24" />
    </FrameLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="@dimen/space80x"
        android:layout_height="wrap_content"
        android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space2x" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="@dimen/space80x"
        android:layout_height="wrap_content"
        android:hint="@string/login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space2x" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:endIconMode="password_toggle"
        android:layout_width="@dimen/space80x"
        android:layout_height="wrap_content"
        android:hint="@string/pass">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space2x"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:endIconMode="password_toggle"
        android:layout_width="@dimen/space80x"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_pass">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space2x"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up" />
</LinearLayout>