<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditEventFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingBottom="@dimen/space24x">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_spacing"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/space80x"
                android:layout_height="wrap_content"
                android:hint="@string/them">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/space2x" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/space80x"
                android:layout_height="wrap_content"
                android:hint="@string/date_time">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/space2x"
                    android:focusable="false" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="@dimen/space80x"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/common_spacing"
                    android:text="@string/format" />

                <Spinner
                    android:id="@+id/format_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/event_format"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_spacing"
                android:text="@string/speakers" />

            <LinearLayout
                android:layout_width="@dimen/space80x"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt_speakers_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add" />

                <Spinner
                    android:id="@+id/speakers_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/speakers_list"
                android:layout_width="@dimen/space80x"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/space2x"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/card_users_horizontal" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/space80x"
                android:layout_height="wrap_content"
                android:hint="@string/link">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/link"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/space2x" />
            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:id="@+id/photoContainer"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/common_spacing"
                android:layout_marginBottom="@dimen/space12x"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/removePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/remove" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <RelativeLayout
            android:id="@+id/buttonPanel"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            app:layout_anchor="@id/bottomAppBar">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/takePhoto"
                style="@style/Widget.AppTheme.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:padding="@dimen/common_spacing"
                app:icon="@drawable/ic_photo_camera_black_48dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/takeImage"
                style="@style/Widget.AppTheme.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/takePhoto"
                android:padding="@dimen/common_spacing"
                app:icon="@drawable/ic_photo_black_48dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/takeCoords"
                style="@style/Widget.AppTheme.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/takePhoto"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/space2x"
                android:padding="@dimen/common_spacing"
                app:icon="@drawable/ic_baseline_near_me_24" />

        </RelativeLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/bottomAppBar"
        app:srcCompat="@drawable/ic_baseline_check_24" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>