<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="@dimen/space12x"
            android:gravity="center"
            android:padding="@dimen/space4x"
            app:layout_constraintEnd_toStartOf="@id/bt_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Встреча" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_menu"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_more_vert_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/header_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/space24x" />

        <TextView
            android:id="@+id/author_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space2x"
            android:paddingStart="@dimen/space2x"
            android:text="@string/author"
            app:layout_constraintBottom_toBottomOf="@id/author"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content" />

        <include
            android:id="@+id/author"
            layout="@layout/card_users_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/header_guideline"
            app:layout_constraintTop_toBottomOf="@id/content" />

        <TextView
            android:id="@+id/dt_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space2x"
            android:paddingStart="@dimen/space2x"
            android:text="@string/time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/author" />

        <TextView
            android:id="@+id/dt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space2x"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/header_guideline"
            app:layout_constraintTop_toBottomOf="@id/author"
            tools:text="2022-06-20 15:00:00" />

        <TextView
            android:id="@+id/type_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space2x"
            android:paddingStart="@dimen/space2x"
            android:text="@string/format"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dt" />

        <TextView
            android:id="@+id/type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space2x"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/header_guideline"
            app:layout_constraintTop_toBottomOf="@id/dt"
            tools:text="ONLINE" />

        <TextView
            android:id="@+id/speakers_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space2x"
            android:paddingStart="@dimen/space2x"
            android:text="@string/speakers"
            app:layout_constraintBottom_toBottomOf="@id/list_speakers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/type" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_speakers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/space2x"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/header_guideline"
            app:layout_constraintTop_toBottomOf="@id/type"
            tools:listitem="@layout/card_users_horizontal" />

        <TextView
            android:id="@+id/participants_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space2x"
            android:paddingStart="@dimen/space2x"
            android:text="@string/participants"
            app:layout_constraintBottom_toBottomOf="@id/list_participants"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/list_speakers" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_participants"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/space2x"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/header_guideline"
            app:layout_constraintTop_toBottomOf="@id/list_speakers"
            tools:listitem="@layout/card_users_horizontal" />

        <TextView
            android:id="@+id/link_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space2x"
            android:paddingStart="@dimen/space2x"
            android:text="@string/link"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/list_participants" />

        <TextView
            android:id="@+id/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space2x"
            android:autoLink="web"
            android:ellipsize="end"
            android:focusable="true"
            android:lineSpacingExtra="@dimen/space2x"
            android:linksClickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/header_guideline"
            app:layout_constraintTop_toBottomOf="@id/list_participants"
            tools:text="https://os.kaspersky.ru/day_2021/" />

        <ImageView
            android:id="@+id/attachment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/link" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space2x"
            android:text="@string/join"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/attachment" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/footer_barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/common_spacing"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="bt_join" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/like"
            style="@style/Widget.AppTheme.LikeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            app:icon="@drawable/ic_like_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/footer_barrier" />

        <TextView
            android:id="@+id/likeCnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/like"
            app:layout_constraintStart_toEndOf="@id/like"
            app:layout_constraintTop_toBottomOf="@id/footer_barrier"
            tools:text="1000" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/navigate"
            style="@style/Widget.AppTheme.LikeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_near_me_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/footer_barrier" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>